--- a/MyHarvest/Base.lproj/Main.storyboard
+++ b/MyHarvest/Base.lproj/Main.storyboard
@@ -1,140 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13156.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="16c-5e-RGG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13137.5"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
-        <scene sceneID="bJa-jI-iey">
+        <scene sceneID="2GH-Vc-GM2">
             <objects>
-                <tabBarController id="Rzs-6J-c2F" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="eBx-93-f2I">
+                <tabBarController id="16c-5e-RGG" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Oud-5i-gzi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="CpH-43-zeP" kind="relationship" relationship="viewControllers" id="Wkb-7Y-q0l"/>
-                        <segue destination="mLk-cU-Ed3" kind="relationship" relationship="viewControllers" id="cot-dc-IBP"/>
-                        <segue destination="fMT-3m-CGR" kind="relationship" relationship="viewControllers" id="geH-CA-YmZ"/>
+                        <segue destination="fm4-M9-gzC" kind="relationship" relationship="viewControllers" id="qaZ-QO-awU"/>
+                        <segue destination="BZj-N7-hdW" kind="relationship" relationship="viewControllers" id="oSA-RK-kJh"/>
+                        <segue destination="bdW-fx-4mx" kind="relationship" relationship="viewControllers" id="aEA-KO-iKi"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8rS-fC-Nav" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wjU-x4-b9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-730" y="1207"/>
+            <point key="canvasLocation" x="641" y="1195"/>
         </scene>
-        <!--收获-->
-        <scene sceneID="Trp-8D-FM2">
+        <!--Item-->
+        <scene sceneID="mHh-TH-IHS">
             <objects>
-                <navigationController id="mLk-cU-Ed3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="收获" id="Cj8-8K-sHc"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uXd-Bl-lt3">
+                <navigationController id="fm4-M9-gzC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Mc4-uV-Ezj"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WSz-Qx-3rH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="hA2-Cx-Yio" kind="relationship" relationship="rootViewController" id="JaJ-Cc-xHI"/>
+                        <segue destination="SwL-eq-dEa" kind="relationship" relationship="rootViewController" id="URF-FL-paV"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Gqf-yO-K6H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s0t-UJ-oFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="314" y="1207"/>
+            <point key="canvasLocation" x="1551" y="722"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="Jbe-jU-xuv">
+        <!--Login View Controller-->
+        <scene sceneID="HnR-tj-vIZ">
             <objects>
-                <viewController id="hA2-Cx-Yio" sceneMemberID="viewController">
+                <viewController id="SwL-eq-dEa" customClass="MHLoginViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="2HM-gJ-Tpl"/>
-                        <viewControllerLayoutGuide type="bottom" id="uWx-pT-dEL"/>
+                        <viewControllerLayoutGuide type="top" id="o7p-Mh-6od"/>
+                        <viewControllerLayoutGuide type="bottom" id="VBQ-5x-1ss"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="0NS-QO-4ii">
+                    <view key="view" contentMode="scaleToFill" id="BPS-cw-m0K">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="n15-34-Ob4"/>
+                    <navigationItem key="navigationItem" id="THy-65-TOf"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9bh-CQ-MeL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hUJ-Ck-agJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1270" y="1207"/>
+            <point key="canvasLocation" x="2500" y="722"/>
         </scene>
-        <!--我的-->
-        <scene sceneID="CxK-kQ-ny2">
+        <!--Item-->
+        <scene sceneID="ZaV-Lv-xq3">
             <objects>
-                <navigationController id="fMT-3m-CGR" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的" id="PHP-TG-M19"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GFN-TJ-9r7">
+                <navigationController id="BZj-N7-hdW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="SP5-bz-JNI"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="o5X-AR-F7j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="2qm-Zl-KQt" kind="relationship" relationship="rootViewController" id="8wb-xf-tIl"/>
+                        <segue destination="enJ-Hh-UqS" kind="relationship" relationship="rootViewController" id="spb-oH-Umg"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eps-Nw-3xQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JgQ-0r-9Nv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="318" y="1875"/>
+            <point key="canvasLocation" x="1550" y="1397"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="COw-np-Pnd">
+            <objects>
+                <viewController id="enJ-Hh-UqS" customClass="MHHomeViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VlR-cT-XnQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="RyU-Sp-UKX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tr5-b6-RPk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="1gK-ME-wq6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AHL-RO-ktO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2500" y="1397"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="301-DQ-iX0">
+            <objects>
+                <navigationController id="bdW-fx-4mx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="mcs-Qj-seY"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gfd-od-DM7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eIk-gc-Mea" kind="relationship" relationship="rootViewController" id="7wy-H9-U8X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbw-eD-JDo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1542" y="2069"/>
         </scene>
         <!--Mine View Controller-->
-        <scene sceneID="QXm-n1-ULG">
+        <scene sceneID="4z0-pZ-oel">
             <objects>
-                <viewController id="2qm-Zl-KQt" customClass="MHMineViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="eIk-gc-Mea" customClass="MHMineViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="zUh-yq-Mn7"/>
-                        <viewControllerLayoutGuide type="bottom" id="FYp-At-vnV"/>
+                        <viewControllerLayoutGuide type="top" id="K1b-vb-k4M"/>
+                        <viewControllerLayoutGuide type="bottom" id="yoD-8R-c41"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="haY-mJ-21Z">
+                    <view key="view" contentMode="scaleToFill" id="F1W-sL-GMe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Bvv-2L-lyg"/>
+                    <navigationItem key="navigationItem" id="pEc-X8-rEJ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OvA-1h-abS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ucj-Iy-cgi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1265" y="1874"/>
-        </scene>
-        <!--今天-->
-        <scene sceneID="fEl-ES-SDn">
-            <objects>
-                <navigationController id="CpH-43-zeP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="今天" id="Ktt-Z9-pL2"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IOH-A1-JY3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="Dtw-4r-i1n" kind="relationship" relationship="rootViewController" id="N0a-si-e89"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="im2-Cx-HD2" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="318" y="542"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="5EG-5n-HH1">
-            <objects>
-                <viewController id="Dtw-4r-i1n" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="RX9-8N-SGE"/>
-                        <viewControllerLayoutGuide type="bottom" id="jUm-J7-ccR"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="WoL-vl-0bw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="qy7-5Z-psy"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rhK-1r-l6n" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1270" y="542"/>
+            <point key="canvasLocation" x="2500" y="2069"/>
         </scene>
     </scenes>
 </document>
