Modified by nyl 今天页面初步完成 1.实现日历的显示。 2.农历 3.日历模式切换 4.改变当前页时，改变当前选中日期。如果当前页包含了今天，则选择今天 但是周末时下选中当前天无效（三方库的Bug），因此不做该操作

--- a/MyHarvest/Base.lproj/Main.storyboard
+++ b/MyHarvest/Base.lproj/Main.storyboard
@@ -27,11 +27,11 @@
             </objects>
             <point key="canvasLocation" x="641" y="1195"/>
         </scene>
-        <!--Item-->
+        <!--今天-->
         <scene sceneID="mHh-TH-IHS">
             <objects>
                 <navigationController id="fm4-M9-gzC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Mc4-uV-Ezj"/>
+                    <tabBarItem key="tabBarItem" title="今天" id="Mc4-uV-Ezj"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WSz-Qx-3rH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -44,10 +44,10 @@
             </objects>
             <point key="canvasLocation" x="1551" y="722"/>
         </scene>
-        <!--Login View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="HnR-tj-vIZ">
             <objects>
-                <viewController id="SwL-eq-dEa" customClass="MHLoginViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="SwL-eq-dEa" customClass="MHHomeViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="o7p-Mh-6od"/>
                         <viewControllerLayoutGuide type="bottom" id="VBQ-5x-1ss"/>
@@ -55,19 +55,54 @@
                     <view key="view" contentMode="scaleToFill" id="BPS-cw-m0K">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O8D-LD-CSS" customClass="FSCalendar">
+                                <rect key="frame" x="0.0" y="64" width="375" height="260"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="260" id="HLg-ZJ-e5y"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="headerHeight">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="headerTitleColor">
+                                        <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qIv-8Y-AaF">
+                                <rect key="frame" x="0.0" y="324" width="375" height="343"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qIv-8Y-AaF" firstAttribute="leading" secondItem="BPS-cw-m0K" secondAttribute="leading" id="DGP-8l-daJ"/>
+                            <constraint firstItem="qIv-8Y-AaF" firstAttribute="top" secondItem="O8D-LD-CSS" secondAttribute="bottom" id="DzZ-U8-Z0Z"/>
+                            <constraint firstItem="O8D-LD-CSS" firstAttribute="leading" secondItem="BPS-cw-m0K" secondAttribute="leading" id="P3i-Ei-k2n"/>
+                            <constraint firstAttribute="trailing" secondItem="qIv-8Y-AaF" secondAttribute="trailing" id="eAb-o2-Uan"/>
+                            <constraint firstAttribute="bottom" secondItem="qIv-8Y-AaF" secondAttribute="bottom" id="iVH-QH-3IN"/>
+                            <constraint firstAttribute="trailing" secondItem="O8D-LD-CSS" secondAttribute="trailing" id="il2-vU-ff2"/>
+                            <constraint firstItem="O8D-LD-CSS" firstAttribute="top" secondItem="o7p-Mh-6od" secondAttribute="bottom" id="r1W-Bk-lSd"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="THy-65-TOf"/>
+                    <connections>
+                        <outlet property="calendar" destination="O8D-LD-CSS" id="nrm-L1-v5z"/>
+                        <outlet property="calendarHeightConstraint" destination="HLg-ZJ-e5y" id="yCy-4B-K5l"/>
+                        <outlet property="tableView" destination="qIv-8Y-AaF" id="Ukb-x2-ha4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hUJ-Ck-agJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2500" y="722"/>
+            <point key="canvasLocation" x="2500" y="721.88905547226398"/>
         </scene>
-        <!--Item-->
+        <!--收获-->
         <scene sceneID="ZaV-Lv-xq3">
             <objects>
                 <navigationController id="BZj-N7-hdW" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="SP5-bz-JNI"/>
+                    <tabBarItem key="tabBarItem" title="收获" id="SP5-bz-JNI"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="o5X-AR-F7j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -80,10 +115,10 @@
             </objects>
             <point key="canvasLocation" x="1550" y="1397"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="COw-np-Pnd">
             <objects>
-                <viewController id="enJ-Hh-UqS" customClass="MHHomeViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="enJ-Hh-UqS" customClass="MHLoginViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VlR-cT-XnQ"/>
                         <viewControllerLayoutGuide type="bottom" id="RyU-Sp-UKX"/>
@@ -99,11 +134,11 @@
             </objects>
             <point key="canvasLocation" x="2500" y="1397"/>
         </scene>
-        <!--Item-->
+        <!--我的-->
         <scene sceneID="301-DQ-iX0">
             <objects>
                 <navigationController id="bdW-fx-4mx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="mcs-Qj-seY"/>
+                    <tabBarItem key="tabBarItem" title="我的" id="mcs-Qj-seY"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gfd-od-DM7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
