淘汰storyboard。使用代码进行布局

--- a/MyHarvest/Base.lproj/Main.storyboard
+++ b/MyHarvest/Base.lproj/Main.storyboard
@@ -1,181 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="16c-5e-RGG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
     </dependencies>
-    <scenes>
-        <!--Tab Bar Controller-->
-        <scene sceneID="2GH-Vc-GM2">
-            <objects>
-                <tabBarController id="16c-5e-RGG" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="Oud-5i-gzi">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="fm4-M9-gzC" kind="relationship" relationship="viewControllers" id="qaZ-QO-awU"/>
-                        <segue destination="BZj-N7-hdW" kind="relationship" relationship="viewControllers" id="oSA-RK-kJh"/>
-                        <segue destination="bdW-fx-4mx" kind="relationship" relationship="viewControllers" id="aEA-KO-iKi"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wjU-x4-b9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="641" y="1195"/>
-        </scene>
-        <!--今天-->
-        <scene sceneID="mHh-TH-IHS">
-            <objects>
-                <navigationController id="fm4-M9-gzC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="今天" image="toolbar_today" selectedImage="toolbar_today_pre" id="Mc4-uV-Ezj"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WSz-Qx-3rH">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="SwL-eq-dEa" kind="relationship" relationship="rootViewController" id="URF-FL-paV"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="s0t-UJ-oFb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1551" y="722"/>
-        </scene>
-        <!--Home View Controller-->
-        <scene sceneID="HnR-tj-vIZ">
-            <objects>
-                <viewController id="SwL-eq-dEa" customClass="MHHomeViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="o7p-Mh-6od"/>
-                        <viewControllerLayoutGuide type="bottom" id="VBQ-5x-1ss"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="BPS-cw-m0K">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O8D-LD-CSS" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="64" width="375" height="260"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="260" id="HLg-ZJ-e5y"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="headerHeight">
-                                        <real key="value" value="0.0"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="headerTitleColor">
-                                        <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qIv-8Y-AaF">
-                                <rect key="frame" x="0.0" y="324" width="375" height="343"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="qIv-8Y-AaF" firstAttribute="leading" secondItem="BPS-cw-m0K" secondAttribute="leading" id="DGP-8l-daJ"/>
-                            <constraint firstItem="qIv-8Y-AaF" firstAttribute="top" secondItem="O8D-LD-CSS" secondAttribute="bottom" id="DzZ-U8-Z0Z"/>
-                            <constraint firstItem="O8D-LD-CSS" firstAttribute="leading" secondItem="BPS-cw-m0K" secondAttribute="leading" id="P3i-Ei-k2n"/>
-                            <constraint firstAttribute="trailing" secondItem="qIv-8Y-AaF" secondAttribute="trailing" id="eAb-o2-Uan"/>
-                            <constraint firstAttribute="bottom" secondItem="qIv-8Y-AaF" secondAttribute="bottom" id="iVH-QH-3IN"/>
-                            <constraint firstAttribute="trailing" secondItem="O8D-LD-CSS" secondAttribute="trailing" id="il2-vU-ff2"/>
-                            <constraint firstItem="O8D-LD-CSS" firstAttribute="top" secondItem="o7p-Mh-6od" secondAttribute="bottom" id="r1W-Bk-lSd"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="THy-65-TOf"/>
-                    <connections>
-                        <outlet property="calendar" destination="O8D-LD-CSS" id="nrm-L1-v5z"/>
-                        <outlet property="calendarHeightConstraint" destination="HLg-ZJ-e5y" id="yCy-4B-K5l"/>
-                        <outlet property="tableView" destination="qIv-8Y-AaF" id="Ukb-x2-ha4"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hUJ-Ck-agJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2500" y="721.88905547226398"/>
-        </scene>
-        <!--收获-->
-        <scene sceneID="ZaV-Lv-xq3">
-            <objects>
-                <navigationController id="BZj-N7-hdW" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="收获" image="toolbar_tover" id="SP5-bz-JNI"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="o5X-AR-F7j">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="enJ-Hh-UqS" kind="relationship" relationship="rootViewController" id="spb-oH-Umg"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JgQ-0r-9Nv" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1550" y="1397"/>
-        </scene>
-        <!--Login View Controller-->
-        <scene sceneID="COw-np-Pnd">
-            <objects>
-                <viewController id="enJ-Hh-UqS" customClass="MHLoginViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="VlR-cT-XnQ"/>
-                        <viewControllerLayoutGuide type="bottom" id="RyU-Sp-UKX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="tr5-b6-RPk">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="1gK-ME-wq6"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AHL-RO-ktO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2500" y="1397"/>
-        </scene>
-        <!--我的-->
-        <scene sceneID="301-DQ-iX0">
-            <objects>
-                <navigationController id="bdW-fx-4mx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的" image="toolbar_my_pre" id="mcs-Qj-seY"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gfd-od-DM7">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="eIk-gc-Mea" kind="relationship" relationship="rootViewController" id="7wy-H9-U8X"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sbw-eD-JDo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1542" y="2069"/>
-        </scene>
-        <!--Mine View Controller-->
-        <scene sceneID="4z0-pZ-oel">
-            <objects>
-                <viewController id="eIk-gc-Mea" customClass="MHMineViewController" customModule="MyHarvest" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="K1b-vb-k4M"/>
-                        <viewControllerLayoutGuide type="bottom" id="yoD-8R-c41"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="F1W-sL-GMe">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="pEc-X8-rEJ"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ucj-Iy-cgi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2500" y="2069"/>
-        </scene>
-    </scenes>
-    <resources>
-        <image name="toolbar_my_pre" width="27" height="27"/>
-        <image name="toolbar_today" width="27" height="27"/>
-        <image name="toolbar_today_pre" width="27" height="27"/>
-        <image name="toolbar_tover" width="27" height="27"/>
-    </resources>
+    <scenes/>
 </document>
